Second attempt to fix font on mobile

--- a/HomePageStyle.css
+++ b/HomePageStyle.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Comic Sans MS';
+    src: url("comic-sans-ms/comici.ttf");
+  }
+
 body {
     background-color: rgb(237, 225, 211);
     text-align: center;
